# GPGPUTasks2025

./: .clang-format  .gitignore  2025-12-04 16-49-01.mkv  CMakeCache.txt  CMakeLists.txt  CMakeSettings.json  Makefile  README.md  THEORY_SOLUTION.md  THEORY_TASK.md  THEORY_TASK_SOLUTION.md  THEORY_TASK_SOLVED.md  Task02_THEORY.md  answer.txt  build_android.sh  capture (2).webm  capture(5).webm  capture_base.webm  catsdf.webm  cmake_install.cmake  enumDevices  flake.nix  merge_sort.py  pref_sum.py  radix_sort.py  run_android.sh  runcmds  shell.nix  solution.typ  theory-solution.md  vcpkg-configuration.json  vcpkg.json
.github/: pull_request_example.md
.github/workflows/: cmake.yml
libs/: CMakeLists.txt  Makefile  cmake_install.cmake
libs/base/: CMakeLists.txt  cmake_install.cmake
libs/base/libbase/: math.h
libs/clew/: Makefile  cmake_install.cmake
libs/clew/CL/: cl_d3d10.h  cl_ext.h
libs/clew/libclew/: ocl_init.cpp
libs/gpu/: CMakeLists.txt  cmake_install.cmake
libs/gpu/libgpu/: context.cpp  context.h  device.cpp  shared_device_buffer.cpp  shared_device_buffer.h
libs/gpu/libgpu/cuda/: cuda_api.cpp
libs/gpu/libgpu/opencl/: engine.cpp  engine.h  enum.cpp  utils.h
libs/gpu/libgpu/vulkan/: CMakeLists.txt  cmake_install.cmake  data_buffer.h  engine.cpp  engine.h  vulkan_api_headers.h
libs/images/: cmake_install.cmake
libs/images/libimages/: debug_io.cpp
libs/json/: cmake_install.cmake
libs/utils/: CMakeLists.txt  cmake_install.cmake
libs/utils/libutils/: misc.cpp
libs/xorbit/: CmakeLists.txt
libs/xorbit/libxorbit/: contexted_timer.cpp  contexted_timer.h
results/: demo.webm
scripts/linux/: cuda_sdk_install.sh  install_cuda_sdk.sh  install_dependencies.sh  install_dependencies_fedora.sh  install_vulkan_sdk.sh  install_vulkan_sdk_fedora.sh
scripts/macos/: install_dependencies.sh  install_vulkan_sdk.txt  setup-env.sh
scripts/windows/: install_vulkan_sdk.txt
src/: .main_aplusb_matrix.cpp.swp  awesome.glsl  debug.h  main.cpp  main_01_matrix_transpose.cpp  main_02_matrix_multiply.cpp  main_aplusb.cpp  main_aplusb_matrix.cpp  main_csr_spmv.cpp  main_linear_bvh.cpp  main_mandelbrot.cpp  main_merge_sort.cpp  main_prefix_sum.cpp  main_radix_sort.cpp  main_sum.cpp  models.h  prefix_sum_02_prefix_accumulation.cl  sdf_main.glsl
src/cpu_helpers/: build_bvh_cpu.h  morton_code_cpu.h
src/debug/: debug_bvh.h
src/io/: scene_reader.cpp  scene_reader.h
src/kernels/: defines.h  kernels.cpp  kernels.h
src/kernels/cl/: .aplusb_matrix_bad.cl.swp  add_block_offsets.cl  aplusb.cl  aplusb_matrix_bad.cl  aplusb_matrix_good.cl  aplusb_matrix_good_forloop.cl  bigbox_calc.cl  bitonic_sort.cl  bitonic_sort_256.cl  block_sort.cl  bottom_up_aabb.cl  build_aabb.cl  build_aabb_leaves.cl  build_bvh.cl  build_bvh_gpu.cl  build_lbvh.cl  build_lbvh_skeleton.cl  calc_bounds.cl  calc_bvh_aabb.cl  calc_centroids_aabb.cl  calc_morton.cl  calculate_centroid_bounds.cl  calculate_prims.cl  centroids_helpers.cl  compute_centroids.cl  compute_lvbh.cl  compute_morton_code.cl  compute_morton_codes.cl  compute_mortons.cl  copy.cl  copy_array.cl  copy_buffer.cl  copy_to_buffer.cl  copy_with_offset.cl  denoise.cl  denoise_facets.cl  fill.cl  fill_buffer.cl  fill_buffer_with_zeros.cl  fill_index.cl  (+133 more)
src/kernels/cl/generated_kernels/: aplusb.h  aplusb_matrix_bad.h  aplusb_matrix_bad_nospir_opencl120.cl  aplusb_matrix_bad_nospir_opencl120.h  aplusb_matrix_good.h  aplusb_matrix_good_nospir_opencl120.cl  aplusb_matrix_good_nospir_opencl120.h  aplusb_nospir_opencl120.cl  aplusb_nospir_opencl120.h  mandelbrot.h  mandelbrot_nospir_opencl120.cl  (+31 more)
src/kernels/cu/: aplusb.cu  aplusb_matrix_bad.cu  aplusb_matrix_good.cu  build_bvh.cu  build_prim.cu  centroids.cu  copy_buffer.cu  fill_buffer_with_zeros.cu  geometry_helpers.cu  inclusive_scan.cu  lbvh_build_gpu.cu  make_lbvh.cu  mandelbrot.cu  matrix_01_transpose_naive.cu  matrix_02_5_transpose_coalesced_via_local_memory_no_bank_conflict.cu  matrix_02_transpose_coalesced_via_local_memory.cu  matrix_03_multiply_naive.cu  matrix_04_multiply_via_local_memory.cu  matrix_05_multiply_wmma.cu  max.cu  merge_sort.cu  min.cu  morton_codes.cu  pre_build_bvh.cu  prefix_sum.cu  prefix_sum_01_build_fenwick.cu  prefix_sum_01_prepare.cu  prefix_sum_01_reduction.cu  prefix_sum_01_sum_reduction.cu  prefix_sum_02_prefix_accumulation.cu  prefix_sum_02_simple.cu  prefix_sum_03_accumulate.cu  prefix_sum_03_post.cu  radix_sort_01_local_counting.cu  radix_sort_01_scan_build_fenwick.cu  radix_sort_01_scan_sparse.cu  radix_sort_02_global_prefixes_scan_sum_reduction.cu  radix_sort_02_scan_accumulation.cu  radix_sort_02_scan_build_fenwick.cu  radix_sort_03_global_prefixes_scan_accumulation.cu  (+11 more)
src/kernels/shared_structs/: aabb_gpu_shared.h  bvh_node_gpu_shared.h  centroid_gpu_shared.h  denoising_gpu_shared.h  prim_gpu_cuda.h
src/kernels/vk/: aplusb.comp  aplusb_matrix_bad.comp  aplusb_matrix_good.comp  lbvh_hploc.comp  mandelbrot.comp  matrix_01_transpose_naive.comp  matrix_02_transpose_coalesced_via_local_memory.comp  matrix_03_multiply_naive.comp  matrix_04_multiply_via_local_memory.comp  sort_permute.comp  sum_01_atomics.comp  sum_03_local_memory_atomic_per_workgroup.comp  sum_04_local_reduction.comp
src/reuse/: debug.h  defines.h  kernels.h  mergesort.cpp  mergesort.h  prefixsum.cpp  prefixsum.h  radixsort.cpp  radixsort.h  wrappers.h
src/reuse/kernels/: copy.cu  fill.cu  mergesort.cu  prefixsum_main.cu  prefixsum_post.cu  prefixsum_pre.cu  radix_post.cu  radix_pre.cu
theory/: README.md
(+64 files in other folders)
